--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,14 @@
         <div class="col">
             <div class="navbar">
                 <div class="left">
-                    <div class="hamburger">
+                    <div class="hamburger" (click)="showClick()" [ngClass]="!open ? 'opened' : 'closed'">
                         <svg xmlns="http://www.w3.org/2000/svg" id="bold" enable-background="new 0 0 24 24"
                             height="50px" viewBox="0 0 24 24" width="50px">
                             <path
                                 d="m12 0c-6.617 0-12 5.383-12 12s5.383 12 12 12 12-5.383 12-12-5.383-12-12-12zm4 17h-8c-.552 0-1-.448-1-1s.448-1 1-1h8c.552 0 1 .448 1 1s-.448 1-1 1zm0-4h-8c-.552 0-1-.448-1-1s.448-1 1-1h8c.552 0 1 .448 1 1s-.448 1-1 1zm0-4h-8c-.552 0-1-.448-1-1s.448-1 1-1h8c.552 0 1 .448 1 1s-.448 1-1 1z" />
                         </svg>
                     </div>
-                    <div class="brand">
+                    <div class="brand" (click)="category = null">
                         <h1>SANAL MARKET</h1>
                     </div>
                 </div>
@@ -81,11 +81,11 @@
             </div>
 
             <div class="main">
-                <app-sidebar></app-sidebar>
+                <app-sidebar style="z-index: 10;" *ngIf="!open" (event)="fromChild($event)"></app-sidebar>
                 <div class="container-bottom">
                     <div class="row-bottom">
                         <div class="col-bottom">
-                            <div class="main-right">
+                            <div class="main-right" *ngIf="!category">
                                 <div class="slider">
                                     <img src="https://market.eticaret.webdeneme.com/siteler/market/image/catalog/banner1.jpg"
                                         height="350px" width="850px" />
@@ -211,6 +211,19 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="productArray">
+                            <div class="info" *ngFor="let product of category">
+                                <img [src]="'http://localhost:3000/' + product.id"
+                                    style="width: 250px; height: 250px;">
+                                <p class="nameArray">{{product.product_name}}</p>
+                                <hr>
+                                <p class="priceArray">{{product.price}} ₺</p>
+                                <button (click)="addToCart(product)"><p class="addArray">SEPETE EKLE</p></button>
+                                
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
