--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,1 +1,9 @@
-<p>dialog works!</p>
+<h2 mat-dialog-title>Tebrikler!!!</h2>
+
+
+<mat-dialog-content>{{data}} &nbsp; sepetinize eklenmiştir.</mat-dialog-content>
+
+<mat-dialog-actions>
+    <button class="mat-raised-button">Kapat</button>
+    <button class="mat-raised-button">Sepete Git</button>
+</mat-dialog-actions>
