--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -219,7 +219,7 @@
                                 <p class="nameArray">{{product.product_name}}</p>
                                 <hr>
                                 <p class="priceArray">{{product.price}} ₺</p>
-                                <button (click)="addToCart(product)"><p class="addArray">SEPETE EKLE</p></button>
+                                <button (click)="openDialog(product)"><p class="addArray">SEPETE EKLE</p></button>
                                 
                             </div>
                         </div>
