--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@ html,body{
     height: 100%;
     margin: 0px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
