--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
                             <p>Kayıt Ol</p>
                         </button>
                     </div>
-                    <div class="cart">
+                    <div class="cart" routerLink="/cart">
                         <button>
                             <p>Sepetim</p>
                             <svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" enable-background="new 0 0 512 512"
