--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,9 +1,11 @@
-<h2 mat-dialog-title>Tebrikler!!!</h2>
+<h2 mat-dialog-title>Tebrikler!</h2>
 
 
-<mat-dialog-content>{{data}} &nbsp; sepetinize eklenmiştir.</mat-dialog-content>
+<mat-dialog-content>
+    <p>{{data}}&nbsp;sepetinize eklenmiştir.</p>
+</mat-dialog-content>
 
 <mat-dialog-actions>
-    <button class="mat-raised-button">Kapat</button>
-    <button class="mat-raised-button">Sepete Git</button>
+    <button class="mat-raised-button" (click)="closeDialog()">Kapat</button>
+    <button class="mat-raised-button" routerLink = "/cart" (click)="closeDialog()">Sepete Git</button>
 </mat-dialog-actions>
