--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,2 +1,109 @@
-<p>cart works!</p>
-<div class="d" *ngFor="let c of cartItems">{{c.product.product_name}}</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="navbar">
+                <div class="left">
+                    <div class="brand" routerLink="/">
+                        <h1>SANAL MARKET</h1>
+                    </div>
+                </div>
+                <div class="middle">
+                    <div class="searchbar">
+                        <input type="text" placeholder="Ara..">
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                version="1.1" id="Capa_1" x="0px" y="0px" width="20px" height="20px"
+                                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M310,190c-5.52,0-10,4.48-10,10s4.48,10,10,10c5.52,0,10-4.48,10-10S315.52,190,310,190z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M500.281,443.719l-133.48-133.48C388.546,277.485,400,239.555,400,200C400,89.72,310.28,0,200,0S0,89.72,0,200    s89.72,200,200,200c39.556,0,77.486-11.455,110.239-33.198l36.895,36.895c0.005,0.005,0.01,0.01,0.016,0.016l96.568,96.568    C451.276,507.838,461.319,512,472,512c10.681,0,20.724-4.162,28.278-11.716C507.837,492.731,512,482.687,512,472    S507.837,451.269,500.281,443.719z M305.536,345.727c0,0.001-0.001,0.001-0.002,0.002C274.667,368.149,238.175,380,200,380    c-99.252,0-180-80.748-180-180S100.748,20,200,20s180,80.748,180,180c0,38.175-11.851,74.667-34.272,105.535    C334.511,320.988,320.989,334.511,305.536,345.727z M326.516,354.793c10.35-8.467,19.811-17.928,28.277-28.277l28.371,28.371    c-8.628,10.183-18.094,19.65-28.277,28.277L326.516,354.793z M486.139,486.139c-3.78,3.78-8.801,5.861-14.139,5.861    s-10.359-2.081-14.139-5.861l-88.795-88.795c10.127-8.691,19.587-18.15,28.277-28.277l88.798,88.798    C489.919,461.639,492,466.658,492,472C492,477.342,489.919,482.361,486.139,486.139z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M200,40c-88.225,0-160,71.775-160,160s71.775,160,160,160s160-71.775,160-160S288.225,40,200,40z M200,340    c-77.196,0-140-62.804-140-140S122.804,60,200,60s140,62.804,140,140S277.196,340,200,340z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M312.065,157.073c-8.611-22.412-23.604-41.574-43.36-55.413C248.479,87.49,224.721,80,200,80c-5.522,0-10,4.478-10,10    c0,5.522,4.478,10,10,10c41.099,0,78.631,25.818,93.396,64.247c1.528,3.976,5.317,6.416,9.337,6.416    c1.192,0,2.405-0.215,3.584-0.668C311.472,168.014,314.046,162.229,312.065,157.073z" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="login">
+                        <button>
+                            <p>Oturum Aç</p>
+                        </button>
+                    </div>
+                    <hr>
+                    <div class="singup">
+                        <button>
+                            <p>Kayıt Ol</p>
+                        </button>
+                    </div>
+                    <div class="cart" routerLink="/cart">
+                        <button>
+                            <p>Sepetim</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" enable-background="new 0 0 512 512"
+                                height="25px" viewBox="0 0 512 512" width="25px">
+                                <path
+                                    d="m504.399 185.065c-6.761-8.482-16.904-13.348-27.83-13.348h-98.604l-53.469-122.433c-3.315-7.591-12.157-11.06-19.749-7.743-7.592 3.315-11.059 12.158-7.743 19.75l48.225 110.427h-178.458l48.225-110.427c3.315-7.592-.151-16.434-7.743-19.75-7.591-3.317-16.434.15-19.749 7.743l-53.469 122.434h-98.604c-10.926 0-21.069 4.865-27.83 13.348-6.637 8.328-9.086 19.034-6.719 29.376l52.657 230c3.677 16.06 17.884 27.276 34.549 27.276h335.824c16.665 0 30.872-11.216 34.549-27.276l52.657-230.001c2.367-10.342-.082-21.048-6.719-29.376zm-80.487 256.652h-335.824c-2.547 0-4.778-1.67-5.305-3.972l-52.657-229.998c-.413-1.805.28-3.163.936-3.984.608-.764 1.985-2.045 4.369-2.045h85.503l-3.929 8.997c-3.315 7.592.151 16.434 7.743 19.75 1.954.854 3.99 1.258 5.995 1.258 5.782 0 11.292-3.363 13.754-9l9.173-21.003h204.662l9.173 21.003c2.462 5.638 7.972 9 13.754 9 2.004 0 4.041-.404 5.995-1.258 7.592-3.315 11.059-12.158 7.743-19.75l-3.929-8.997h85.503c2.384 0 3.761 1.281 4.369 2.045.655.822 1.349 2.18.936 3.983l-52.657 230c-.528 2.301-2.76 3.971-5.307 3.971z" />
+                                <path
+                                    d="m166 266.717c-8.284 0-15 6.716-15 15v110c0 8.284 6.716 15 15 15s15-6.716 15-15v-110c0-8.284-6.715-15-15-15z" />
+                                <path
+                                    d="m256 266.717c-8.284 0-15 6.716-15 15v110c0 8.284 6.716 15 15 15s15-6.716 15-15v-110c0-8.284-6.716-15-15-15z" />
+                                <path
+                                    d="m346 266.717c-8.284 0-15 6.716-15 15v110c0 8.284 6.716 15 15 15s15-6.716 15-15v-110c-.001-8.284-6.716-15-15-15z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content" *ngIf="cartItems.length>0; else cartEmptyContent">
+                <div class="header">
+                    <h2>Sepetim</h2>
+                    <button routerLink="/">Alışverişe Devam Et</button>
+                </div>
+                <div class="content-in">
+                    <div class="myCart" *ngFor="let item of cartItems">
+                        <img [src]="'http://localhost:3000/' + item.product.id"
+                            style="width: 130px; height: 130px; border-radius: 50%;">
+                        <p>{{item.product.product_name}}</p>
+                        <p>{{item.quantity}}</p>
+                        <p>{{item.quantity*item.product.price}}</p>
+                        <div class="delete">
+                            <button (click)="removeFromCart(item.product)">Sil</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ng-template #cartEmptyContent>
+                <div class="template">
+                    <div class="head">
+                        <h2>Sepetim</h2>
+                        <button routerLink="/">Alışverişe Başla</button>
+                    </div>
+                    <div class="content-in">
+                        <div class="myCart">
+                            <p>Sepetinizde ürün bulunmamaktadır.</p>
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
+        </div>
+    </div>
+</div>
