--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="middle">
                     <div class="searchbar">
-                        <input type="text" placeholder="Ara..">
+                        <input type="text" placeholder="Ara.." [(ngModel)] = "filterText"/>
                         <button>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 version="1.1" id="Capa_1" x="0px" y="0px" width="20px" height="20px"
@@ -213,7 +213,7 @@
                         </div>
 
                         <div class="productArray">
-                            <div class="info" *ngFor="let product of category">
+                            <div class="info" *ngFor="let product of category | filter:filterText">
                                 <img [src]="'http://localhost:3000/' + product.id"
                                     style="width: 250px; height: 250px;">
                                 <p class="nameArray">{{product.product_name}}</p>
