--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,13 +50,13 @@
                     </div>
                 </div>
                 <div class="right">
-                    <div class="login">
+                    <div class="login" routerLink="/login">
                         <button>
                             <p>Oturum Aç</p>
                         </button>
                     </div>
                     <hr>
-                    <div class="singup">
+                    <div class="singup" routerLink="/singup">
                         <button>
                             <p>Kayıt Ol</p>
                         </button>
