--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,8 @@ html,body{
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-global-scrollblock {
+    top: 0 !important;
+    left: 0 !important;
+}
